quick-install/kubernetes/ovc-rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ovc-rabbitmq-service-nodeport
  namespace: ovc-infra
spec:
  type: NodePort
  selector: { app: ovc-rabbitmq }
  ports:
    - { name: amqp, port: 5672, targetPort: 5672, nodePort: 30672 }
    - { name: management, port: 15672, targetPort: 15672, nodePort: 31672 }
